added 404 error support

--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -4,6 +4,8 @@
 
 body {
     height: 100vh;
+    display: flex;
+    flex-flow: column;
 }
 
 nav {
@@ -36,7 +38,8 @@ nav {
     flex-grow: 2;
 }
 
-a {
+.panel a {
     user-select: none;
     color: white;
+    display: block;
 }
