--- a/app/templates/home/home.jinja
+++ b/app/templates/home/home.jinja
@@ -4,6 +4,10 @@
   <script type="application/x-javascript" src="{{url_for('static', filename='scripts/script.js')}}" defer></script>
 {% endblock %}
 
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
+{% endblock styles %}
+
 {% set main_panel = [ 
   ('PRZEGLĄDAJ ZDJĘCIA', url_for("static", filename="images/leftPanel.jpg"), '/gallery/main'), 
   ('PRZEGLĄDAJ SWOJĄ KOLEKCJĘ', url_for("static", filename="images/rightPanel.jpg"), '/gallery/favourite')
