Added most of gallery frontend

--- a/app/templates/base.jinja
+++ b/app/templates/base.jinja
@@ -33,9 +33,10 @@
   </nav>
 
   {% block content %}
-  {% endblock %}
+  {% endblock content %}
 
-  {% block scripts %}{% endblock %}
+  {% block scripts %}
+  {% endblock scripts%}
   
 </body>
 </html>
