--- a/app/templates/errors/404.jinja
+++ b/app/templates/errors/404.jinja
@@ -2,12 +2,12 @@
 
 {% block title %}
     <title>Nie znaleziono</title>
-{% endblock %}
+{% endblock title %}
 
 {% block styles %}
     <link rel="stylesheet" href="{{url_for('static', filename='styles/errors/404.css')}}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-{% endblock %}
+{% endblock styles %}
 
 {% block content %}
     <div class="container">
@@ -15,4 +15,4 @@
         <h2>Chyba się zgubiłeś! 🛸</h2>
         <a class="waves-effect waves-light btn-large" href='/'>HOME</a>
     </div>
-{% endblock %}
+{% endblock content %}
