--- a/app/templates/errors/base_error.jinja
+++ b/app/templates/errors/base_error.jinja
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}{% endblock %}
-    {% block styles %}{% endblock %} 
+    {% block title %}{% endblock title %}
+    {% block styles %}{% endblock styles %} 
 </head>
 <body>
     {% block content %}
-    {% endblock %}
+    {% endblock content %}
 </body>
 </html>
