--- a/app/templates/home/home.jinja
+++ b/app/templates/home/home.jinja
@@ -2,7 +2,7 @@
 
 {% block scripts %} 
   <script type="application/x-javascript" src="{{url_for('static', filename='scripts/script.js')}}" defer></script>
-{% endblock %}
+{% endblock scripts %}
 
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
@@ -21,4 +21,4 @@
     </div>
     {% endfor %}
   </div>
-{% endblock %}
+{% endblock content %}
