--- a/app/templates/home/gallery.jinja
+++ b/app/templates/home/gallery.jinja
@@ -7,45 +7,62 @@
 {% endblock styles %}
 
 {% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js" defer></script>
-    <script type="application/x-javascript" src="{{url_for('static', filename='scripts/gallery.js')}}" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('select');
+            var instances = M.FormSelect.init(elems);
+        });
+    </script>
 {% endblock scripts %}
 
 
 {% block content %}
 <div class="col s8">
     <div class="form-container">
-        <form action="/" class="col s14">
-            <div class="row">
-                <div class="input-field hoverable col s4">
-                    <i class="material-icons prefix">email</i>
-                    <input placeholder="Email" id="email" type="email" class="validate">
+        <div class="container">
+            <form action="/gallery/main" class="col s14">
+                <div class="row">
+                    <div class="input-field hoverable col s4">
+                        <i class="material-icons prefix">today</i>
+                        <input id="date" type="date" name="date" class="validate" required>
+                    </div>
+                    <div class="input-field col s4">
+                        <select name="camera" required>
+                            <option value="" disabled selected>Wybierz kamerę</option>
+                            <option value="FHAZ">Front Hazard Avoidance Camera</option>
+                            <option value="RHAZ">Rear Hazard Avoidance Camera</option>
+                            <option value="MAST">Mast camera Camera</option>
+                            <option value="CHEMCAM">Chemistry and Camera Complex</option>
+                            <option value="MAHLI">Mars Hand Lens Imager</option>
+                            <option value="MARDI">Mars Descent Imager</option>
+                            <option value="NAVCAM">Navigation Camera</option>
+                            <option value="PANCAM">Panoramic Camera</option>
+                            <option value="MINITES">Miniature Thermal Emission Spectrometer (Mini-TES)</option>
+                        </select>
+                    </div>
+                    <div class="input-field col s4">
+                        <select name="rover" required>
+                            <option value="" disabled selected>Wybierz łazik</option>
+                            <option value="curiosity">Curiosity</option>
+                            <option value="opportunity">Opportunity</option>
+                            <option value="spirit">Spirit</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="input-field hoverable col s4">
-                    <i class="material-icons prefix">vpn_key</i>
-                    <input placeholder="Hasło" id="password" type="password" class="validate">
+                <div class="container center-align">
+                    <button type="submit" class="row waves-effect waves-light btn hoverable center-align valign-wrapper">Wyszukaj
+                        <i class="large material-icons right">done</i>
+                    </button>
                 </div>
-                <div class="input-field col s4">
-                    <select>
-                        <option value="">Choose your option</option>
-                        <option value="1">Option 1</option>
-                        <option value="2">Option 2</option>
-                        <option value="3">Option 3</option>
-                    </select>
-                </div>
-            </div>
-            <div class="container center-align">
-                <button type="submit" class="row waves-effect waves-light btn hoverable center-align valign-wrapper">Wyszukaj
-                    <i class="large material-icons right">done</i>
-                </button>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
     {% if not images %}
         <h1 class="center-align grey-text">Niestety nie znaleziono żadnych zdjęć</h1>
     {% else %}
         <div class="row">
-            <div class="col s12 cards-container">
+            <div class="col s12 cards-container" style="padding-left: 50px; padding-right: 50px">
                 {% for image in images %}
                     <div class="card hoverable"  style="border: solid black 1px">
                         <div class="card-image">
