--- a/app/templates/home/home.jinja
+++ b/app/templates/home/home.jinja
@@ -1,7 +1,7 @@
 {% extends "base.jinja" %}
 
 {% block scripts %} 
-  <script type="application/x-javascript" src="{{url_for('static', filename='scripts/script.js')}}" defer></script>
+  <script type="application/x-javascript" src="{{url_for('static', filename='scripts/home.js')}}" defer></script>
 {% endblock scripts %}
 
 {% block styles %}
