--- a/app/static/styles/gallery.css
+++ b/app/static/styles/gallery.css
@@ -7,7 +7,7 @@ body {
     overflow: visible;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 300px) {
     .cards-container {
         -webkit-column-count: 2;
         -moz-column-count: 2;
@@ -15,7 +15,7 @@ body {
     }
 }
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 700px) {
     .cards-container {
         -webkit-column-count: 3;
         -moz-column-count: 3;
@@ -23,11 +23,27 @@ body {
     }
 }
 
-@media only screen and (min-width: 993px) {
+@media only screen and (min-width: 1000px) {
     .cards-container {
         -webkit-column-count: 4;
         -moz-column-count: 4;
         column-count: 4;
+    }
+}
+
+@media only screen and (min-width: 1300px) {
+    .cards-container {
+        -webkit-column-count: 5;
+        -moz-column-count: 5;
+        column-count: 5;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    .cards-container {
+        -webkit-column-count: 6;
+        -moz-column-count: 6;
+        column-count: 6;
     }
 }
 
