--- a/app/templates/home/gallery.jinja
+++ b/app/templates/home/gallery.jinja
@@ -25,14 +25,14 @@
                 <div class="row">
                     <div class="input-field hoverable col s4">
                         <i class="material-icons prefix">today</i>
-                        <input id="date" type="date" name="date" class="validate" required>
+                        <input value="{{ req.args['date'] }}" id="date" type="date" name="date" class="validate" required>
                     </div>
                     <div class="input-field col s4">
-                        <select name="camera" required>
+                        <select value="{{ req.args['camera'] }}" name="camera" required>
                             <option value="" disabled selected>Wybierz kamerę</option>
                             <option value="FHAZ">Front Hazard Avoidance Camera</option>
                             <option value="RHAZ">Rear Hazard Avoidance Camera</option>
-                            <option value="MAST">Mast camera Camera</option>
+                            <option value="MAST">Mast Camera</option>
                             <option value="CHEMCAM">Chemistry and Camera Complex</option>
                             <option value="MAHLI">Mars Hand Lens Imager</option>
                             <option value="MARDI">Mars Descent Imager</option>
@@ -42,7 +42,7 @@
                         </select>
                     </div>
                     <div class="input-field col s4">
-                        <select name="rover" required>
+                        <select value="{{ req.args['rover'] }}" name="rover" required>
                             <option value="" disabled selected>Wybierz łazik</option>
                             <option value="curiosity">Curiosity</option>
                             <option value="opportunity">Opportunity</option>
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col s12 cards-container" style="padding-left: 50px; padding-right: 50px">
                 {% for image in images %}
-                    <div class="card hoverable"  style="border: solid black 1px">
+                    <div class="card hoverable"  style="border: solid black 1px;">
                         <div class="card-image">
                             <img src="{{ image['img_src'] }}">
                             <span class="card-title">{{ image['rover']['name'] }} : {{ image['camera']['name'] }}</span>
