--- a/app/templates/auth/register.jinja
+++ b/app/templates/auth/register.jinja
@@ -16,31 +16,29 @@
     </nav>
 
   </div>
-  <form action="/" class="col s14">
+  <form action="/auth/register" method="POST" class="col s14">
+  {{ form.hidden_tag() }}
     <div class="row">
       <div class="input-field hoverable col s6">
         <i class="material-icons prefix">account_circle</i>
-        <input placeholder="Nazwa użytkownika" id="username" type="text" class="validate">
+        {{ form.username(size=30, class="validate", placeholder="Nazwa użytkownika") }}
       </div>
       <div class="input-field hoverable col s6">
         <i class="material-icons prefix">email</i>
-        <input placeholder="Email" id="email" type="email" class="validate">
+        {{ form.email(size=30, class="validate", placeholder="Email") }}
       </div>
     </div>
     <div class="row">
       <div class="input-field hoverable col s6">
         <i class="material-icons prefix">vpn_key</i>
-        <input placeholder="Hasło" id="password" type="password" class="validate">
-        
+        {{ form.password(size=30, class="validate", placeholder="Hasło") }}
       </div>
       <div class="input-field hoverable col s6">
         <i class="material-icons prefix">replay</i>
-        <input placeholder="Powtórz hasło" id="password2" type="password" class="validate">
+        {{ form.confirm(size=30, class="validate", placeholder="Powtórz hasło") }}
       </div>
     </div>
-    <button type="submit" class="waves-effect waves-light btn right hoverable">Zarejestruj Się
-        <i class="large material-icons right">done</i>
-    </button>
+    {{ form.submit(class="waves-effect waves-light btn right hoverable submit-button white-text") }}
   </form>
 
 </div>
