--- a/app/templates/base.jinja
+++ b/app/templates/base.jinja
@@ -19,7 +19,7 @@
   <title>Mars Viewer</title>
 </head>
 <body>
-  <nav>
+  <nav style="background-color: rgb(53, 51, 50)">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">MARS VIEWER</a>
       <ul class="right hide-on-med-and-down">
