--- a/app/templates/home/favourites.jinja
+++ b/app/templates/home/favourites.jinja
@@ -5,6 +5,15 @@
 {% endblock styles %}
 
 {% block content %}
+    <div class="row">
+        <nav style="background-color: rgb(61, 60, 58);">
+            <div class="nav-wrapper">
+                <div class="col s8">
+                <h3 class="brand-logo col s8">Kolekcja użytkownika: {{current_user.username}}</h3>
+                </div>
+            </div>
+        </nav>
+    </div>
     {% if not images %}
         <h1 class="center-align grey-text">Niestety nie znaleziono żadnych zdjęć</h1>
     {% else %}
@@ -17,7 +26,6 @@
                                 <img src="{{ image['img_src'] }}">
                                 <span class="card-title">{{ image['rover']['name'] }} : {{ image['camera']['name'] }}</span>
                             </a>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                         </div>
                         <div class="card-content">
                             <p>Sol: {{ image['sol'] }}, Ziemska data: {{ image['earth_date'] }}</p>
